WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188617
[Curl] Bug fix on deleting cookies when Max-Age is set to zero.
https://bugs.webkit.org/show_bug.cgi?id=188617
Summary
[Curl] Bug fix on deleting cookies when Max-Age is set to zero.
Basuke Suzuki
Reported
2018-08-15 13:44:54 PDT
Those cookies whose Max-Age is set to zero must be erased, but there's a bug in the condition.
Attachments
PATCH
(3.63 KB, patch)
2018-08-15 13:48 PDT
,
Basuke Suzuki
achristensen
: review-
Details
Formatted Diff
Diff
fix
(3.81 KB, patch)
2018-08-16 17:03 PDT
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2018-08-15 13:48:56 PDT
Created
attachment 347206
[details]
PATCH
Alex Christensen
Comment 2
2018-08-16 16:25:34 PDT
Comment on
attachment 347206
[details]
PATCH View in context:
https://bugs.webkit.org/attachment.cgi?id=347206&action=review
> Source/WebCore/platform/network/curl/CookieJarDB.cpp:352 > + if (!cookie.session && expires <= ::time(0))
There are better ways of getting the current time in WebCore, like MonotonicTime::now
Basuke Suzuki
Comment 3
2018-08-16 16:30:16 PDT
Comment on
attachment 347206
[details]
PATCH View in context:
https://bugs.webkit.org/attachment.cgi?id=347206&action=review
>> Source/WebCore/platform/network/curl/CookieJarDB.cpp:352 >> + if (!cookie.session && expires <= ::time(0)) > > There are better ways of getting the current time in WebCore, like MonotonicTime::now
Alright. Thanks!
Basuke Suzuki
Comment 4
2018-08-16 17:03:59 PDT
Created
attachment 347326
[details]
fix
WebKit Commit Bot
Comment 5
2018-08-16 17:50:22 PDT
Comment on
attachment 347326
[details]
fix Clearing flags on attachment: 347326 Committed
r234973
: <
https://trac.webkit.org/changeset/234973
>
WebKit Commit Bot
Comment 6
2018-08-16 17:50:24 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-08-16 17:52:26 PDT
<
rdar://problem/43403772
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug