[Curl] Bug fix on deleting cookies when Max-Age is set to zero. https://bugs.webkit.org/show_bug.cgi?id=188617

Reviewed by Alex Christensen.

Source/WebCore:

Delete cookie if Max-Age is set to zero in Set-Cookie. Original implementation was
compared using "less than", but it must be "less than or equal" to zero.

Tests: http/tests/websocket/tests/hybi/websocket-cookie-overwrite-behavior.html

* platform/network/curl/CookieJarDB.cpp:
(WebCore::CookieJarDB::setCookie):

LayoutTests:

* platform/wincairo/TestExpectations:
  - http/tests/websocket/tests/hybi/websocket-cookie-overwrite-behavior.html [ Pass ]


Canonical link: https://commits.webkit.org/203752@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234973 268f45cc-cd09-0410-ab3c-d52691b4dbfc